Fixed styling issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  padding-bottom: 80px;
+  padding-top: 8px;
+  padding-bottom: 54px;
   min-height: 100vh; }
   @media only screen and (min-width: 600px) {
     .App {
