--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -36,24 +36,34 @@ footer {
     left: 10%;
     width: 80%;
     height: 2px;
-    background-color: pink;
+    // background-color: rgb(128, 128, 128);
   }
 
   .progress-indicator-wrapper {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 20px;
+    width: 20px;
+
 
     .progress-indicator {
       // This is the visual indicato
       // Next 2 lines makes it centered at the progress position
       position: relative;
       right: 50%;
+      top: -25%;
 
       height: 100%;
       width: 100%;
-      background-color: rgb(0, 255, 0);
+      // background-color: rgb(0, 255, 0);
       z-index: 4;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      // border: 1px dashed red;
+
+      overflow: visible;
     }
   }
 }
