--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,7 +1,7 @@
 @import "../../_global.scss";
 
 .wrapper {
-  width: 99.5vw;
+  width: 95vw;
   max-width: 600px;
 
   display: flex;
